Fix missing background issue for nav

--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -270,13 +270,13 @@ nav {
   position: sticky;
   top: 0;
   z-index: 1000;
+  background-color: $bg;
   margin-bottom: 15px;
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   .navigation-wrapper {
     padding-top: 15px;
     padding-bottom: 15px;
-    background-color: $bg;
     display: flex;
     justify-content: space-between;
     align-items: center;
